# eggshell-db

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/eggshell/compiler/: executeresult.hpp  parser.hpp  prepareresult.hpp  statement.hpp
include/eggshell/compiler/metacmd/: metacmd.hpp
include/eggshell/storage/: cursor.hpp  table.hpp
include/eggshell/storage/bplus/: internalnode.hpp  leafnode.hpp  node.hpp  nodetype.hpp
include/modeldb/compiler/: parser.hpp  statement.hpp
include/modeldb/compiler/metacmd/: metacmd.hpp  metacmdresult.hpp
include/modeldb/storage/: cursor.hpp  pager.hpp  row.hpp  table.hpp
include/modeldb/storage/bplus/: internalnode.hpp  leafnode.hpp  node.hpp
src/: bplus_tree.cpp  bplusnode.cpp  bplusnode.hpp  ibplustree.cpp  repl.cpp
src/bplus/: bplusnode.cpp  bplusnode.hpp  ibplustree.cpp  ibplustree.hpp
src/compiler/: compiler.cpp  parser.cpp  statement.cpp
src/compiler/metacmd/: metacmd.cpp
src/storage/: cursor.cpp  pager.cpp  row.cpp  table.cpp
src/storage/bplus/: internalnode.cpp  leafnode.cpp  node.cpp
tests/: btree_test.cpp  test.cpp
